--- a/Project.toml
+++ b/Project.toml
@@ -6,14 +6,16 @@ version = "0.1.0"
 [deps]
 CoDa = "5900dafe-f573-5c72-b367-76665857777b"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
-ScientificTypesBase = "30f210dd-8aff-4c5f-94ba-8e64358c1161"
+ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CoDa = "0.6"
 Distances = "0.10"
-ScientificTypesBase = "2.3"
+ScientificTypes = "2.3"
 StringDistances = "0.11"
+Tables = "1.5"
 julia = "1.6"
 
 [extras]
