--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 CoDa = "5900dafe-f573-5c72-b367-76665857777b"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
