--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
+TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
@@ -16,6 +17,7 @@ CoDa = "0.6"
 Distances = "0.10"
 ScientificTypes = "2.3"
 StringDistances = "0.11"
+TableOperations = "1.1"
 Tables = "1.5"
 julia = "1.6"
 
