--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Júlio Hoffimann <julio.hoffimann@gmail.com>", "José Augusto <jose.
 version = "0.1.0"
 
 [deps]
+CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CoDa = "5900dafe-f573-5c72-b367-76665857777b"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
@@ -13,6 +14,7 @@ TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
+CategoricalArrays = "0.10"
 CoDa = "0.6"
 Distances = "0.10"
 ScientificTypes = "2.3"
