--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CoDa = "5900dafe-f573-5c72-b367-76665857777b"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
