--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "TableDistances"
 uuid = "e5d66e97-8c70-46bb-8b66-04a2d73ad782"
 authors = ["Júlio Hoffimann <julio.hoffimann@gmail.com>", "José Augusto <jose.augusto@impa.br>"]
-version = "0.1.4"
+version = "0.2.0"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -10,16 +10,14 @@ Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 ScientificTypes = "321657f4-b219-11e9-178b-2701a2544e81"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
-TableOperations = "ab02a1b2-a7df-11e8-156e-fb1833f50b87"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CategoricalArrays = "0.10"
-CoDa = "0.7, 0.8, 0.9"
+CoDa = "0.10"
 Distances = "0.10"
 ScientificTypes = "2.3, 3.0"
 StringDistances = "0.11"
-TableOperations = "1.1"
 Tables = "1.5"
 julia = "1.6"
 
