--- a/Project.toml
+++ b/Project.toml
@@ -4,23 +4,23 @@ authors = ["Júlio Hoffimann <julio.hoffimann@gmail.com>", "José Augusto <jose.
 version = "0.3.0"
 
 [deps]
+CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
+DataScienceTraits = "6cb2f572-2d2b-4ba6-bdb3-e710fa044d6c"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [weakdeps]
-CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CoDa = "5900dafe-f573-5c72-b367-76665857777b"
 
 [extensions]
-TableDistancesCategoricalArraysExt = "CategoricalArrays"
 TableDistancesCoDaExt = "CoDa"
 
 [compat]
 CategoricalArrays = "0.10"
 CoDa = "1.0"
+DataScienceTraits = "0.1"
 Distances = "0.10"
-StringDistances = "0.11"
+Statistics = "1.9"
 Tables = "1.5"
 julia = "1.9"
