--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,9 +11,11 @@ jobs:
       matrix:
         version:
           - 'lts'
-          - 'nightly'
+          - '1'
         os:
           - ubuntu-latest
+          - macos-latest
+          - windows-latest
         arch:
           - x64
     steps:
