--- a/Project.toml
+++ b/Project.toml
@@ -5,17 +5,17 @@ version = "1.0.0"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
-CoDa = "5900dafe-f573-5c72-b367-76665857777b"
 DataScienceTraits = "6cb2f572-2d2b-4ba6-bdb3-e710fa044d6c"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
 CategoricalArrays = "0.10"
-CoDa = "1.0"
 DataScienceTraits = "1.0"
 Distances = "0.10"
+LinearAlgebra = "1.11"
 Statistics = "1.9"
 Tables = "1.5"
 julia = "1.9"
