--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 CoDa = "5900dafe-f573-5c72-b367-76665857777b"
+ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
