--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "TableDistances"
 uuid = "e5d66e97-8c70-46bb-8b66-04a2d73ad782"
 authors = ["Júlio Hoffimann <julio.hoffimann@gmail.com>", "José Augusto <jose.augusto@impa.br>"]
-version = "1.1.0"
+version = "1.1.1"
 
 [deps]
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -12,7 +12,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
 [compat]
-CategoricalArrays = "0.10"
+CategoricalArrays = "0.10, 1.0"
 DataScienceTraits = "1.0"
 Distances = "0.10"
 LinearAlgebra = "1.9"
